Use URL instead of virtual URL when creating NSURLRequest.

I believe this is a latent bug. NSURLReuest should reflect the actual
URL to be loaded in the web view, not the virtual URL that is meant to
be displayed to the user. Using virtual URL here breaks
WKBasedNavigationManagerImpl::Restore(), which creates a NavigationItem
whose URL is restore_session.html and whose virtual URL is the to-be-
restored page for display in omnibox.

The virtual URL usage was introduced in
https://codereview.chromium.org/2581193002. The CL description indicates
that virtual URL may not have been the correct value to use here in the
first place.

Bug: 807102
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I5d40be25ee26e370ffa960b6acb2fb7e74ee91d6
Reviewed-on: https://chromium-review.googlesource.com/892285
Commit-Queue: Danyao Wang <danyao@chromium.org>
Reviewed-by: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532892}